# axum-project

./: Cargo.toml
scripts/: run_client.sh  run_server.sh
src/: error.rs  main.rs
src/web/: routes_login.rs
tests/: quick_dev.rs
