[package]
name = "axum-course"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ["full"]}
# Serde / jsom
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1"
# Axum
axum = "0.8.1"
tower-http = { version = "0.5", features = ["fs"]}
lazy_static = "1.5.0"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"